<resources>
    <string name="app_name">E Teacher</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="already_have_account">Already have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_dont_have_created_joined_any_class">You dont have created/joined any class</string>
    <string name="todo">TODO</string>
    <string name="join_classroom">Join Classroom</string>
    <string name="students">Students</string>
    <string name="assignments">Assignments</string>
    <string name="home">Home</string>
    <string name="create_classroom_for_students">Create Classroom for Students</string>
    <string name="enter_class_room_details">Enter Class room details</string>
    <string name="classroom_join_code">Classroom join code</string>
    <string name="subject_name">Subject Name</string>
    <string name="section">Section</string>
    <string name="semester">Semester</string>
    <string name="pick_class_time">Pick class time</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="department">Department</string>
    <string name="my_classrooms">My Classrooms</string>
    <string name="joined_classrooms">Joined Classrooms</string>
    <string name="lectures_materials">Lectures Materials</string>
    <string name="quiz">Quiz</string>
    <string name="join_class_enter_code_to_join_class">Join Class enter code to join class</string>
    <string name="join_code">Join code</string>
    <string name="join_class">Join Class</string>
    <string name="notifications">Notifications</string>
    <string name="invite">Invite</string>
    <string name="start_video_classroom">Start Video Classroom</string>
    <string name="start_video">Start Video</string>
    <string name="class_id">Class ID</string>
    <string name="nostudent">No Student yet</string>
    <string name="live">Live</string>
    <string name="_12_30_pm">12:30 PM</string>
    <string name="class_main_streams">Class Main Streams</string>
    <string name="class_work">Class Work</string>
    <string name="marks">Marks</string>
    <string name="upload">Upload</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="joined_date">Joined Date</string>
    <string name="student_name">Student Name</string>
    <string name="remove">Remove</string>
    <string name="download">Download</string>
    <string name="not_marked">Not marked yet</string>
</resources>