<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tootlbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Dashboard" />

    <RelativeLayout
        android:id="@+id/RLMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tootlbarHome"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:fontFamily="@font/popinsemibold"
            android:text="@string/_12_30_pm"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvsubjectName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/popinsemibold"
                android:letterSpacing="0.1"
                android:text="@string/subject_name"
                android:textAllCaps="true"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/popinlighta"
                android:letterSpacing="0.1"
                android:text="@string/section"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDepartment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/popinlighta"
                android:letterSpacing="0.1"
                android:text="@string/department"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popinlighta"
                    android:text="@string/class_id" />

                <TextView
                    android:id="@+id/classID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3EEEE"
                    android:padding="10dp"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/popinlighta"
                    android:text="@string/join_code" />

                <TextView
                    android:id="@+id/joinCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3EEEE"
                    android:padding="10dp"
                    android:textIsSelectable="true" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RLMain"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinsemibold"
            android:text="@string/class_main_streams"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewMainStream"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnVideoClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_vector_vebcam"
        android:tint="@color/white"
        app:backgroundTint="@color/color_primary"
        app:tint="@color/white" />


</RelativeLayout>