<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/joinClassParent"
    tools:context=".Activities.JoinClassActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarJoinClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Join Class" />

    <ProgressBar
        android:id="@+id/progressbarJoinClass"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_circuler_background"
        android:elevation="10dp"
        android:indeterminateTint="@color/color_primary"
        android:padding="5dp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarJoinClass"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/popinlighta"
            android:text="@string/join_class_enter_code_to_join_class"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtClassID"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/class_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtjoinclass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/join_code">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnJoinClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/join_class"
            android:textAllCaps="false" />


    </LinearLayout>


</RelativeLayout>