<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RLParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AssignmentsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAssignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarAssignment"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/description_optional">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/marks"
            android:textSize="16.0sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/marks"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/edtTopic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:inputType="number"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Topic"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/edtmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:inputType="text"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/due_date"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/edtDueDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:focusable="false"
            android:inputType="text"
            tools:ignore="Autofill,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/btnAttachFile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:elevation="5dp"
                android:gravity="center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_attach_file_24" />

            </LinearLayout>

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>