<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/classroomParent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_rounded_background_card"
        android:elevation="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnMenu"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_more_vert_24"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvsubjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/popinsemibold"
                android:letterSpacing="0.1"
                android:text="@string/subject_name"
                android:textAllCaps="true"
                android:textColor="@color/color_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/popinlighta"
                android:letterSpacing="0.1"
                android:text="@string/section"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDepartment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/popinlighta"
                android:letterSpacing="0.1"
                android:text="@string/department"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/group" />

                <TextView
                    android:id="@+id/students"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/popinlighta"
                    android:gravity="center_vertical"
                    android:text="@string/students"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>